...
        dashboardRouter?.routeToSettings(nil)
    }

    func addAccessibilityIdentifiersForAppium() {
        setAccessibilityId(settings, to: "Settings")
        setAccessibilityId(randomEventButton, to: "Random Event Button")
        setAccessibilityId(customEventButton, to: "custom_event_button")
        setAccessibilityId(sendDeviceAttributesButton, to: "Device Attribute Button")
        setAccessibilityId(sendProfileAttributesButton, to: "Profile Attribute Button")
        setAccessibilityId(showPushPromptButton, to: "Show Push Prompt Button")
        setAccessibilityId(locationTestButton, to: "location_test_button")
        setAccessibilityId(inboxButton, to: "inbox_messages_button")
        setAccessibilityId(logoutButton, to: "Log Out Button")
...
